--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_device_details.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_device_details.xml
@@ -1,72 +1,65 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="@color/background_grey1"
-tools:context="com.rpm.clynx.fragments.DeviceDetailsFragment">
-
-<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background_grey1"
+    tools:context="com.rpm.clynx.fragments.DeviceDetailsFragment">
 
-    <TextView
-        android:id="@+id/empty_viewDD"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/no_data_available"
-        android:visibility="gone"
-        android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Device Details"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:padding="15dp"
-        android:layout_marginBottom="@dimen/margin_5dp"
-        app:fontFamily="@font/rubik_semibold"
-        tools:ignore="MissingConstraints" />
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/empty_viewDD"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_data_available"
+            android:visibility="gone"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:fillViewport="true">
 
-                <LinearLayout
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="@dimen/margin_20dp">
+
+                <!-- Move Device Details title inside scrollable layout -->
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="@dimen/margin_20dp"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    android:text="Device Details"
+                    android:textColor="@color/black"
+                    android:textSize="24sp"
 
-                    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                        xmlns:tools="http://schemas.android.com/tools"
-                        android:id="@+id/fragmentDevice"
-                        android:name="com.rpm.clynx.fragments.DeviceDetailsFragment"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:layoutManager="LinearLayoutManager"
-                        tools:context="com.rpm.clynx.fragments.DeviceDetailsFragment"
-                        tools:listitem="@layout/device_item_list"
-                        app:layout_constraintTop_toBottomOf="@+id/devno" />
+                    android:layout_marginBottom="@dimen/margin_5dp"
+                    app:fontFamily="@font/rubik_semibold" />
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="300dp"/>
-                </LinearLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/fragmentDevice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layoutManager="LinearLayoutManager"
+                    tools:listitem="@layout/device_item_list" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"/>
+            </LinearLayout>
         </androidx.core.widget.NestedScrollView>
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
