--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_personal.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_personal.xml
@@ -20,7 +20,9 @@
 
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingBottom="40dp"
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -62,6 +64,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_20dp"
+                            android:layout_marginLeft="@dimen/margin_10dp"
                             android:text="First Name"
                             android:textColor="@color/Primary_dark"
                             android:textSize="14sp"
@@ -104,6 +107,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="@dimen/margin_10dp"
+                                    android:layout_marginLeft="@dimen/margin_10dp"
                                     android:text="Middle Name"
                                     android:textColor="@color/Primary_dark"
                                     android:textSize="14sp"
@@ -146,6 +150,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="@dimen/margin_10dp"
+                                    android:layout_marginLeft="@dimen/margin_10dp"
                                     android:text="Last Name"
                                     android:textColor="@color/Primary_dark"
                                     android:textSize="14sp"
@@ -180,6 +185,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_20dp"
+                            android:layout_marginLeft="@dimen/margin_10dp"
                             android:text="Date of Birth"
                             android:textColor="@color/Primary_dark"
                             android:textSize="14sp"
@@ -210,6 +216,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_20dp"
+                            android:layout_marginLeft="@dimen/margin_10dp"
                             android:fontFamily="@font/rubik_regular"
                             android:text="Gender"
                             android:textColor="@color/Primary_dark"
@@ -253,6 +260,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="@dimen/margin_20dp"
+                                    android:layout_marginLeft="@dimen/margin_10dp"
                                     android:text="Height"
                                     android:textColor="@color/Primary_dark"
                                     android:textSize="14sp"
@@ -296,6 +304,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="@dimen/margin_20dp"
+                                    android:layout_marginLeft="@dimen/margin_10dp"
                                     android:text="Weight"
                                     android:textColor="@color/Primary_dark"
                                     android:textSize="14sp"
@@ -347,6 +356,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/margin_20dp"
+                                android:layout_marginLeft="@dimen/margin_10dp"
                                 android:text="Email ID"
                                 android:textColor="@color/Primary_dark"
                                 android:textSize="14sp"
@@ -377,6 +387,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/margin_20dp"
+                                android:layout_marginLeft="@dimen/margin_10dp"
                                 android:text="Mobile Number (Primary)"
                                 android:textColor="@color/Primary_dark"
                                 android:textSize="14sp"
@@ -407,6 +418,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/margin_20dp"
+                                android:layout_marginLeft="@dimen/margin_10dp"
                                 android:text="Alternate Number (Optional)"
                                 android:textColor="@color/Primary_dark"
                                 android:textSize="14sp"
