--- a/mobile/android/rpm_android/app/src/main/res/layout/activity_login.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/activity_login.xml
@@ -141,12 +141,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10dp"
-                    android:hint="Password"
+                    android:hint="Enter Password"
                     app:boxBackgroundMode="none"
                     app:boxStrokeWidth="0dp"
                     app:boxStrokeWidthFocused="0dp"
                     app:endIconMode="password_toggle"
-                    app:endIconTint="@color/text_dark"
+                    app:endIconTint="@color/background5"
                     app:hintTextColor="@color/text_dark"
                     android:textColorHint="@color/text_light">
 
