--- a/mobile/android/rpm_android/app/src/main/res/layout/channel_item.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/channel_item.xml
@@ -12,6 +12,7 @@ android:layout_height="wrap_content">
     android:orientation="vertical"
     android:padding="10dp">
     <LinearLayout
+        android:id="@+id/channelRowLayout"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="horizontal">
