--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_communicn.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_communicn.xml
@@ -22,7 +22,9 @@
 
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingBottom="40dp"
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
