--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_medications.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_medications.xml
@@ -28,7 +28,9 @@ tools:context="com.rpm.clynx.fragments.MedicationFragment">
         app:layout_constraintTop_toBottomOf="@+id/llo_med">
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="40dp"
+            >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
