--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_pgm_info.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_pgm_info.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background1"
- >
+>
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="50dp"
-            android:text="My Info"
+            android:text="Program Info"
             android:textAlignment="center"
             android:textColor="@color/Primary_dark"
             android:textSize="18sp"
@@ -36,7 +36,7 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:layout_margin="@dimen/margin_5dp"
+        android:layout_margin="@dimen/margin_10dp"
         app:cardCornerRadius="@dimen/margin_10dp"
         app:cardBackgroundColor="@color/background_grey1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,47 +45,56 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="1.0">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/myinfo_tablayout"
-        style="@style/RoundedTabLayoutStyle"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="@color/background_grey1"
-        app:layout_constraintCircleRadius="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="1.0"
-        app:tabPaddingStart="1dp"
-        app:tabPaddingEnd="1dp"
-        app:tabTextAppearance="@style/CustomTextAppearanceTab"
-        app:tabBackground="@drawable/tab_layout_bg">
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/pgminfo_tablayout"
+            style="@style/RoundedTabLayoutStyle"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="@color/background_grey1"
+            app:layout_constraintCircleRadius="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.476"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintVertical_bias="1.0"
+            app:tabBackground="@drawable/tab_layout_bg"
+            app:tabIconTint="@color/tab_icon"
+            app:tabIndicatorColor="@color/colorPrimary"
+            app:tabInlineLabel="true"
+            app:tabSelectedTextColor="@color/colorPrimary"
+            app:tabTextAppearance="@style/CustomTextAppearanceTab">
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text="Personal" />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:icon="@drawable/icons_settings"
+                />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text="Communication" />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:icon="@drawable/icons_settings"
+                />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text="Preference" />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:icon="@drawable/icons_settings" />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:icon="@drawable/icons_settings" />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:icon="@drawable/icons_settings" />
 
-    </com.google.android.material.tabs.TabLayout>
+        </com.google.android.material.tabs.TabLayout>
 
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
-        android:id="@+id/ll_personal_myinfo"
+        android:id="@+id/ll_personal_pgminfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -93,11 +102,9 @@
         app:layout_constraintTop_toBottomOf="@+id/card_view">
 
         <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewPager"
+            android:id="@+id/viewPgmPager"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/background2" />
-
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
