--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_program_details.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_program_details.xml
@@ -22,7 +22,9 @@
 
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingBottom="40dp"
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -92,6 +94,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_20dp"
+                            android:layout_marginLeft="@dimen/margin_10dp"
                             android:text="Duration"
                             android:textColor="@color/Primary_dark"
                             android:textSize="14sp"
@@ -122,6 +125,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_20dp"
+                            android:layout_marginLeft="@dimen/margin_10dp"
                             android:text="Start Date"
                             android:textColor="@color/Primary_dark"
                             android:textSize="14sp"
@@ -152,6 +156,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_20dp"
+                            android:layout_marginLeft="@dimen/margin_10dp"
                             android:text="End Date"
                             android:textColor="@color/Primary_dark"
                             android:textSize="14sp"
@@ -183,6 +188,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_20dp"
+                            android:layout_marginLeft="@dimen/margin_10dp"
                             android:text=""
                             android:textColor="@color/Primary_dark"
                             android:textSize="14sp"
@@ -213,6 +219,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_20dp"
+                            android:layout_marginLeft="@dimen/margin_10dp"
                             android:text="Physician"
                             android:textColor="@color/Primary_dark"
                             android:textSize="14sp"
@@ -243,6 +250,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_20dp"
+                            android:layout_marginLeft="@dimen/margin_10dp"
                             android:text="Care Team Personal"
                             android:textColor="@color/Primary_dark"
                             android:textSize="14sp"
@@ -273,6 +281,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_20dp"
+                            android:layout_marginLeft="@dimen/margin_10dp"
                             android:text="Goals"
                             android:textColor="@color/Primary_dark"
                             android:textSize="14sp"
