--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_program_timeline.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_program_timeline.xml
@@ -22,7 +22,9 @@ tools:context="com.rpm.clynx.fragments.ProgramTimelineFragment">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="40dp"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -55,6 +57,7 @@ tools:context="com.rpm.clynx.fragments.ProgramTimelineFragment">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_20dp"
+                        android:layout_marginLeft="@dimen/margin_10dp"
                         android:text="Date"
                         android:textColor="@color/Primary_dark"
                         android:textSize="14sp"
@@ -84,6 +87,7 @@ tools:context="com.rpm.clynx.fragments.ProgramTimelineFragment">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_20dp"
+                        android:layout_marginLeft="@dimen/margin_10dp"
                         android:text="Physician"
                         android:textColor="@color/Primary_dark"
                         android:textSize="14sp"
@@ -114,6 +118,7 @@ tools:context="com.rpm.clynx.fragments.ProgramTimelineFragment">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_20dp"
+                        android:layout_marginLeft="@dimen/margin_10dp"
                         android:text="Clinic"
                         android:textColor="@color/Primary_dark"
                         android:textSize="14sp"
@@ -143,6 +148,7 @@ tools:context="com.rpm.clynx.fragments.ProgramTimelineFragment">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_20dp"
+                        android:layout_marginLeft="@dimen/margin_10dp"
                         android:text="Clinic Code"
                         android:textColor="@color/Primary_dark"
                         android:textSize="14sp"
@@ -173,6 +179,7 @@ tools:context="com.rpm.clynx.fragments.ProgramTimelineFragment">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_20dp"
+                        android:layout_marginLeft="@dimen/margin_10dp"
                         android:text="Order Date"
                         android:textColor="@color/Primary_dark"
                         android:textSize="14sp"
@@ -203,6 +210,7 @@ tools:context="com.rpm.clynx.fragments.ProgramTimelineFragment">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_20dp"
+                        android:layout_marginLeft="@dimen/margin_10dp"
                         android:text="Diagnosis"
                         android:textColor="@color/Primary_dark"
                         android:textSize="14sp"
@@ -231,6 +239,7 @@ tools:context="com.rpm.clynx.fragments.ProgramTimelineFragment">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_20dp"
+                        android:layout_marginLeft="@dimen/margin_10dp"
                         android:text="Date"
                         android:textColor="@color/Primary_dark"
                         android:textSize="14sp"
@@ -261,6 +270,7 @@ tools:context="com.rpm.clynx.fragments.ProgramTimelineFragment">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_20dp"
+                        android:layout_marginLeft="@dimen/margin_10dp"
                         android:text="Enrollment Personal"
                         android:textColor="@color/Primary_dark"
                         android:textSize="14sp"
@@ -305,6 +315,7 @@ tools:context="com.rpm.clynx.fragments.ProgramTimelineFragment">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_20dp"
+                        android:layout_marginLeft="@dimen/margin_10dp"
                         android:text="Date"
                         android:textColor="@color/Primary_dark"
                         android:textSize="14sp"
@@ -336,6 +347,7 @@ tools:context="com.rpm.clynx.fragments.ProgramTimelineFragment">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_20dp"
+                        android:layout_marginLeft="@dimen/margin_10dp"
                         android:text="Care Team Personal"
                         android:textColor="@color/Primary_dark"
                         android:textSize="14sp"
@@ -366,6 +378,7 @@ tools:context="com.rpm.clynx.fragments.ProgramTimelineFragment">
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_20dp"
+                        android:layout_marginLeft="@dimen/margin_10dp"
                         android:text="Care Team Manager"
                         android:textColor="@color/Primary_dark"
                         android:textSize="14sp"
