--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_symptoms.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_symptoms.xml
@@ -29,7 +29,9 @@
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="40dp"
+            >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,8 +55,7 @@
                 android:name="com.rpm.clynx.fragments.SymptomsFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
+
                 app:layoutManager="LinearLayoutManager"
                 tools:context="com.rpm.clynx.fragments.SymptomsFragment"
                 tools:listitem="@layout/symptoms_item_list"
