--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_vital_readings.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_vital_readings.xml
@@ -18,7 +18,9 @@
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="40dp"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -94,7 +96,7 @@
                     android:name="com.rpm.clynx.fragments.VitalReadingsFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
+
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="16dp"
                     app:layoutManager="LinearLayoutManager"
