--- a/mobile/android/rpm_android/app/src/main/res/layout/fragment_vital_schedules.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/fragment_vital_schedules.xml
@@ -22,7 +22,9 @@ tools:context="com.rpm.clynx.fragments.VitalSchedulesFragment">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="40dp"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -38,6 +40,7 @@ tools:context="com.rpm.clynx.fragments.VitalSchedulesFragment">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_30dp"
                         android:text="Vital Schedules"
                         android:textColor="@color/black"
                         android:textSize="24sp"
@@ -48,6 +51,7 @@ tools:context="com.rpm.clynx.fragments.VitalSchedulesFragment">
                         android:id="@+id/schedno"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_20dp"
+                        android:layout_marginLeft="@dimen/margin_30dp"
                         android:text="Schedule 1"
                         android:textColor="@color/accent2"
                         android:textSize="16sp"
