--- a/mobile/android/rpm_android/app/src/main/res/layout/insurance_item.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/insurance_item.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp">
+    >
 
     <TextView
         android:id="@+id/itemPrimSec"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_20dp"
+        android:layout_marginLeft="@dimen/margin_10dp"
         android:text="Primary Insurance"
         android:textColor="@color/Primary_dark"
         android:textSize="14sp"
@@ -19,7 +20,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_marginTop="@dimen/spacing_xmedium"
         android:background="@drawable/pgm_info_bg">
 
