--- a/mobile/android/rpm_android/app/src/main/res/layout/symptoms_item.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/symptoms_item.xml
@@ -2,18 +2,24 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:padding="10dp"
+    android:layout_marginBottom="12dp"
     android:layout_height="wrap_content">
     <LinearLayout
+        android:id="@+id/symptomCardContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/card_background_white"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:layout_marginBottom="10dp"
+       >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/itemSymp"
