--- a/mobile/android/rpm_android/app/src/main/res/layout/vital_schedules_item_list.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/vital_schedules_item_list.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -23,6 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_20dp"
+                android:layout_marginLeft="@dimen/margin_10dp"
                 android:text="Vital Monitoring"
                 android:textColor="@color/Primary_dark"
                 android:textSize="14sp"
@@ -52,6 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_20dp"
+                android:layout_marginLeft="@dimen/margin_10dp"
                 android:text="Schedule"
                 android:textColor="@color/Primary_dark"
                 android:textSize="14sp"
@@ -101,6 +103,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10dp"
+                android:layout_marginLeft="@dimen/margin_10dp"
                 android:text="Intervals"
                 android:textColor="@color/Primary_dark"
                 android:textSize="14sp"
@@ -263,6 +266,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_20dp"
+                android:layout_marginLeft="@dimen/margin_10dp"
                 android:text="Normal Range"
                 android:textColor="@color/Primary_dark"
                 android:textSize="14sp"
