--- a/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.html
@@ -690,7 +690,7 @@
                 formControlName="cliniccode"
                 id="addPatientClinicCode"
                 maxlength="5"
-                [attr.disabled]="true"
+                [readonly]="true"
               />
             </div>
           </div>
