--- a/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/editpatient/editpatient.component.html
@@ -1252,7 +1252,7 @@
                   class="goals_note_container"
                   *ngFor="let goal of Goals_Selected; let i = index"
                 >
-                  <form class="goal_list" [name]="i">
+                  <div class="goal_list" >
                     <div>
                       <div class="note_dropdown">
                         <div class="userInfoItem" style="width: 48%">
@@ -1280,13 +1280,13 @@
                       </mat-form-field> -->
                       <textarea
                         class="goal_description noteTextArea"
-                        formControlName="additionalnotes"
                         id="addPatientAdditionalNotes"
                         [(ngModel)]="goal.Description"
+                        [ngModelOptions]="{ standalone: true }"
                         maxlength="500"
                       ></textarea>
                     </div>
-                  </form>
+                  </div>
                 </div>
               </div>
             </div>
