merge_rpm-bugfix-28/08/2025

--- a/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.html
+++ b/web/src/app/components/admin-dashboard/components/addpatient/addpatient.component.html
@@ -1454,7 +1454,7 @@
                     required
                     formControlName="cliniccode"
                     id="addPatientClinicCode"
-                    [attr.disabled]="true"
+                    [readonly]="true"
                   />
                 </div>
               </div>
