--- a/web/src/app/components/admin-dashboard/components/add-user/add-user.component.html
+++ b/web/src/app/components/admin-dashboard/components/add-user/add-user.component.html
@@ -20,7 +20,7 @@
             <button
               id="btnaduseregister"
               class="commonConfirmaddPatientBtn btn_confirm"
-              (click)="registerUser()"
+              (click)="saveUserFlow()"
             >
               CONFIRM
             </button>
