--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -276,47 +276,23 @@
                     src="../../../../../assets/refresh.png"
                 /></span>
               </div>
-              <!-- <section
-                class="progrssbar_container"
-                [ngClass]="
-                  patientInteractionMin > colorcodeval ? 'completed-target' : 'progress-target'
-                "
-              >
-
-                <div class="custom-progress-bar-outer">
-                  <div
-                    class="custom-progress-bar-inner"
-                    [style.width.%]="interactionpercentValue > 100 ? 100 : interactionpercentValue"
-                  ></div>
-                </div>
-
-                <div
-                  *ngIf="interactionpercentValue > 100"
-                  class="progressvalue"
-                >
-                  {{ patientInteractionMin }}:{{ patientInteractionSec }}
-                </div>
-
-                <div
-                  *ngIf="interactionpercentValue <= 100"
-                  class="progressvalue"
-                >
-                  {{ patientInteractionMin }}:{{ patientInteractionSec }} /
-
-                  {{ totalInteractionTime }} min
-                </div>
-              </section> -->
               <section
-                class="progrssbar_container"
-                [ngClass]="patientInteractionMin > colorcodeval ? 'completed-target' : ''"
-              >
+                class="progrssbar_container">
                 <!-- Custom Progress Bar -->
-                <div class="custom-progress-bar-outer">
+                <!-- <div class="custom-progress-bar-outer">
                   <div
                     class="progress-fill-data"
                     [style.width.%]="interactionpercentValue > 100 ? 100 : interactionpercentValue"
                   ></div>
+                </div> -->
+                  <div class="custom-progress-bar-outer">
+                  <div
+                    class="progress-fill-data"
+                    [style.width.%]="patientInteractionMin > colorcodeval ? 100 : (interactionpercentValue > 100 ? 100 : interactionpercentValue)"
+                    [ngClass]="patientInteractionMin > colorcodeval ? 'completed-target-data' : ''"
+                  ></div>
                 </div>
+
 
                 <!-- Time display -->
                 <div *ngIf="interactionpercentValue > 100" class="progressvalue">
@@ -1627,47 +1603,16 @@
                 /></span>
               </div>
 
-              <!-- <section class="progrssbar_container"> -->
-                <!-- <section
-                  class="progrssbar_container"
-                  [ngClass]="
-                    patientInteractionMin > 19 ? 'completed-target' : ''
-                  "
-                >
 
-                  <div class="custom-progress-bar-outer">
-                    <div
-                      class="custom-progress-bar-inner"
-                      [style.width.%]="interactionpercentValue > 100 ? 100 : interactionpercentValue"
-                    ></div>
-                  </div>
-
-                  <div
-                    *ngIf="interactionpercentValue > 100"
-                    class="progressvalue"
-                  >
-                    {{ patientInteractionMin }}:{{ patientInteractionSec }}
-                  </div>
-
-                  <div
-                    *ngIf="interactionpercentValue <= 100"
-                    class="progressvalue"
-                  >
-                    {{ patientInteractionMin }}:{{ patientInteractionSec }} /
-
-                    {{ totalInteractionTime }} min
-                  </div>
-                </section>
-              </section> -->
               <section
                 class="progrssbar_container"
-                [ngClass]="patientInteractionMin > colorcodeval ? 'completed-target' : ''"
               >
                 <!-- Custom Progress Bar -->
                 <div class="custom-progress-bar-outer">
                   <div
                     class="progress-fill-data"
-                    [style.width.%]="interactionpercentValue > 100 ? 100 : interactionpercentValue"
+                    [style.width.%]="patientInteractionMin > colorcodeval ? 100 : (interactionpercentValue > 100 ? 100 : interactionpercentValue)"
+                    [ngClass]="patientInteractionMin > colorcodeval ? 'completed-target-data' : ''"
                   ></div>
                 </div>
 
@@ -1676,7 +1621,7 @@
                   {{ patientInteractionMin }}:{{ patientInteractionSec }}
                 </div>
 
-                <div *ngIf="interactionpercentValue <= 100" class="progressvalue">
+                <div *ngIf="interactionpercentValue <= 100" class="progressvalue" >
                   {{ patientInteractionMin }}:{{ patientInteractionSec }} /
                   {{ totalInteractionTime }} min
                 </div>
@@ -3145,10 +3090,10 @@
                   </ng-container>
 
                   <ng-container matColumnDef="Last_Billing_Cycle">
-                    <mat-header-cell *matHeaderCellDef
+                    <mat-header-cell class="last-billing-col" *matHeaderCellDef
                       >Last Billing Cycle</mat-header-cell
                     >
-                    <mat-cell *matCellDef="let element"
+                    <mat-cell class="last-billing-col" *matCellDef="let element"
                       ><span>{{
                         element.Last_Billing_Cycle == null
                           ? "Not available"
@@ -4374,7 +4319,7 @@
 
             <mat-cell *matCellDef="let element">
               <span *ngIf="element.StartDate">{{
-                datepipe.transform(element.StartDate, "MMM d,y")
+                datepipe.transform(this.convertToLocalTime(element.StartDate), "MMM d,y")
               }}</span>
             </mat-cell>
           </ng-container>
@@ -4384,7 +4329,7 @@
 
             <mat-cell *matCellDef="let element">
               <span *ngIf="element.EndDate">{{
-                datepipe.transform(element.EndDate, "MMM d,y")
+                datepipe.transform(this.convertToLocalTime(element.EndDate), "MMM d,y")
               }}</span>
             </mat-cell>
           </ng-container>
