--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
@@ -3663,6 +3663,10 @@ li + li {
   /* Green for completed */
 }
 
+.completed-target-data {
+  background-color: #6da86f !important;
+  /* Green for completed */
+}
 .progress-fill-data {
   height: 100%;
   background-color:  hsl(40, 74%, 60%) ; /* progress color */
@@ -3759,4 +3763,9 @@ li + li {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px #98c7c8;
   background-color: #edeff5;
+}
+.last-billing-col {
+  min-width: 220px;
+  width: 220px;
+  flex: 0 0 220px; /* Prevent shrinking */
 }
