--- a/web/src/app/components/admin-dashboard/shared/side-panel-patient/side-panel-patient.component.html
+++ b/web/src/app/components/admin-dashboard/shared/side-panel-patient/side-panel-patient.component.html
@@ -1379,13 +1379,12 @@
               formControlName="frmpatientName"
             />
           </div>
-
+        <fieldset [disabled]="checkedSingle || AssigneeMemberStatus">
           <div class="common_content">
             <p class="common_content_title">Schedule Type</p>
             <select
               class="common_input_dropdown"
               id="Sch_UpdateType"
-              [attr.disabled]="checkedSingle || AssigneeMemberStatus ? true : null"
               formControlName="scheduleType"
               required
             >
@@ -1407,10 +1406,12 @@
               </ng-container>
             </div>
           </div>
+        </fieldset>
+
           <div class="common_content common_content_description">
             <p class="common_content_title">Schedule Description</p>
             <textarea
-              [attr.disabled]="AssigneeMemberStatus ? true : null"
+              [readonly]="AssigneeMemberStatus ? true : null"
               id="Sch_UpdateDescription"
               placeholder="Describe Schedule"
               formControlName="scheduleDescription"
@@ -1465,7 +1466,7 @@
               <p class="common_content_title">Start Date</p>
               <input
                 class="common_input_dropdown"
-                [attr.disabled]="AssigneeMemberStatus ? true : null"
+                [readonly]="AssigneeMemberStatus ? true : null"
                 id="schedule_start"
                 type="text"
                 min="{{ todaty_date }}"
@@ -1489,7 +1490,7 @@
 
               <input
                 class="common_input_dropdown"
-                [attr.disabled]="AssigneeMemberStatus ? true : null"
+                [readonly]="AssigneeMemberStatus ? true : null"
                 type="text"
                 min="{{ todaty_date }}"
                 onfocus="(this.type='date')"
@@ -1514,7 +1515,7 @@
               <p class="common_content_title">Start Date</p>
               <input
                 class="common_input_dropdown"
-                [attr.disabled]="AssigneeMemberStatus ? true : null"
+                [readonly]="AssigneeMemberStatus ? true : null"
                 type="text"
                 onfocus="(this.type='date')"
                 id="schedule_start"
@@ -1544,7 +1545,7 @@
                 onfocus="(this.type='time')"
                 formControlName="startTime"
                 id="Sch_StartTime"
-                [attr.disabled]="AssigneeMemberStatus ? true : null"
+                [readonly]="AssigneeMemberStatus ? true : null"
               />
               <div class="warn">
                 <ng-container
@@ -1589,8 +1590,8 @@
               </div>
             </div>
           </div>
-
-          <div class="common_content" *ngIf="checkedSeries">
+           <fieldset [disabled]="AssigneeMemberStatus">
+              <div class="common_content" *ngIf="checkedSeries">
             <p class="common_content_title">Frequency</p>
 
             <select
@@ -1835,7 +1836,9 @@
                 </div>
               </div>
             </div>
-          </div>
+           </div>
+           </fieldset>
+
 
           <div class="common_content">
             <p class="common_content_title">Assignee Name</p>
